Thu Feb 15 11:24:46 EST 2001 Ben Collins <bcollins@debian.org>

  * utils/Makefile.in: Do not use libopt.a, since libdpkg.a not includes those
    objects
  * optlib/Makefile.in: do not generate libopt.a
  * lib/Makefile.in: build libdpkg.a to include the objects from optlib
  * Makefile.conf.in: Add optlib to -I includes

Sat Feb  3 18:25:25 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/rules: use POSIX glob instead of regexp

Sat Feb  3 18:18:42 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.1: fix description for dpkg-gencontrol
  * archtable: add entry for OpenBSD 2.8 for i386
  * scripts/dpkg-architecture.p: add openbsd-i386 entry

Sat Feb  3 18:12:18 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: check for ranlib
  * lib/Makefile.in: run ranlib on libdpkg.a

Fri Feb  2 14:27:47 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.pl: use -e instead of -f to test
    for filesystem object existance
  * scripts/dpkg-source.pl: swap chdir and open in extracttar to
    prevent race with source-directory being removed while the
    sh/grep process is still running. Patch from Colin Watson

Thu Feb  1 18:22:05 EST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.pl: fix error in error message
  * utils/Makefile.in: set top_builddir
  * Makefile.in: spell version-nr correctly

Sun Jan 28 22:38:02 EST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.pl: modify how we handle the dscformat: we now
    assume all major versions are upwards and backwards compatibly. This
    allows us to add new fields without breaking older versions of 
    dpkg-source

Sun Jan 21 20:09:36 SGT 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-divert.pl: only allow absolute filenames
  * main/configure.c: add -N option to diff invocation

Mon Jan 15 07:27:10 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.
