@@ -25,7 +25,7 @@ Usage:
  dpkg-divert [options] [--add] <file>               - add a diversion
  dpkg-divert [options] --remove <file>              - remove the diversion
  dpkg-divert [options] --list [<glob-pattern>]      - show file diversions
- dpkg-divert [options] --truname <file>             - return the diverted file
+ dpkg-divert [options] --truename <file>            - return the diverted file
 
 Options: 
     --package <package>        name of the package whose copy of <file>
