@@ -936,8 +936,8 @@ sub extracttar {
     defined($c2= fork) || &syserr("fork for tar -xkf -");
     if (!$c2) {
         open(STDIN,"<&GZIP") || &syserr("reopen gzip for tar -xkf -");
-        chdir("$dirchdir") || &syserr("cannot chdir to \`$dirchdir' for tar extract");
         &cpiostderr;
+        chdir("$dirchdir") || &syserr("cannot chdir to \`$dirchdir' for tar extract");
         exec('tar','-xkf','-'); &syserr("exec tar -xkf -");
     }
     close(GZIP);
