@@ -19,6 +19,9 @@ dpkg (1.9.0) unstable; urgency=low
     Closes: Bug#82797
   * Fix manpage for dpkg-gencontrol. Fies: Bug#84625
   * Use POSIX glob instead of regexp in debian/rules. Closes: Bug#84582
+  * fix typo in usage message for dpkg-divert, Closes: Bug#85977
+  * Use full path for argv[0] when calling scripts. Closes: Bug#68783
+  * Add ia64 support to dpkg-architecture.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
