@@ -1,3 +1,10 @@
+Fri Feb 23 10:22:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-divert.pl: fix typo in usage message
+  * main/help.c: mangle argv[0] in do_script to always be the full path
+  * include/dpkg-db.h: include string.h so things compile on ia64 
+  * scripts/dpkg-architecture.pl: add ia64
+
 Thu Feb 15 11:24:46 EST 2001 Ben Collins <bcollins@debian.org>
 
   * utils/Makefile.in: Do not use libopt.a, since libdpkg.a not includes those
